Limpieza de archivos innecesarios

--- a/app_remline/templates/app_remline/index.html
+++ b/app_remline/templates/app_remline/index.html
@@ -255,6 +255,7 @@ http://www.tooplate.com/view/2077-modern-town
 <script src="{% static 'app_remline/js/remline/controllerModificarSuceso.js' %}"></script>
 <script src="{% static 'app_remline/js/remline/controllerNuevaHistoria.js' %}"></script>
 <script src="{% static 'app_remline/js/remline/controllerModificarHistoria.js' %}"></script>
+<script src="{% static 'app_remline/js/remline/controllerLogin.js' %}"></script>
 <script src="{% static 'app_remline/js/remline/directiveCsvReader.js' %}"></script>
 <script src="{% static 'app_remline/js/remline/directiveGhVisualization.js' %}"></script>
 
