--- a/app_remline/templates/app_remline/modalNuevaHistoria.html
+++ b/app_remline/templates/app_remline/modalNuevaHistoria.html
@@ -16,11 +16,11 @@
 		<form class="form-horizontal" name="editForm" ng-show="tipoEntradaDatos!='decidir'">
 			  <div class="form-group">
 			    <label for="name" class="col-sm-3 col-xs-12 control-label">{/'_nombre' | translate/}</label>
-			    <div class="col-sm-8 col-xs-12"><input type="text" name="nombre" class="form-control" placeholder="Nombre" ng-model="item.nombre" required></div>
+			    <div class="col-sm-8 col-xs-12"><input type="text" name="nombre" class="form-control" placeholder="{/'_nombre' | translate/}" ng-model="item.nombre" required></div>
 			  </div>
 			  <div class="form-group">
 			    <label for="name" class="col-sm-3 col-xs-12 control-label">{/'_descripcion' | translate/}</label>
-			    <div class="col-sm-8 col-xs-12"><input type="text" class="form-control" placeholder="Descripcion" ng-model="item.descripcion" required></div>
+			    <div class="col-sm-8 col-xs-12"><input type="text" class="form-control" placeholder="{/'_descripcion' | translate/}" ng-model="item.descripcion" required></div>
 			  </div>
 		</form>
 		<form name="cargaForm" ng-show="tipoEntradaDatos==='csv'">
