--- a/app_remline/templates/app_remline/login.html
+++ b/app_remline/templates/app_remline/login.html
@@ -83,6 +83,9 @@
 									</div>
 								</form>
 								<form name="formRecordar" role="form" ng-show="form_login==='recordar'" >
+									<div>
+			      						<p style="font-size:12px">http://example.com/api/reset/<b>UID</b>/<b>Token</b>/</p>
+									</div>
 									<div class="form-group">
 										<input type="text" name="uid" class="form-control" placeholder="UID" ng-model="recordarPass.uid" required />
 									</div>
